Lecture_4/Windows PowerShell.txt
Windows PowerShell
Copyright (C) Microsoft Corporation. All rights reserved.

Install the latest PowerShell for new features and improvements!https://aka.ms/PSWindows

PS C:\Users\ivana\Desktop\cs50w\Lecture_4\I1_Airlines> cd .\airline\
PS C:\Users\ivana\Desktop\cs50w\Lecture_4\I1_Airlines\airline> python manage.py makemigrations
No changes detected
PS C:\Users\ivana\Desktop\cs50w\Lecture_4\I1_Airlines\airline> python manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, flights, sessions
Running migrations:
  No migrations to apply.
PS C:\Users\ivana\Desktop\cs50w\Lecture_4\I1_Airlines\airline> python manage.py shell
Python 3.11.2 (tags/v3.11.2:878ead1, Feb  7 2023, 16:38:35) [MSCv.1934 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from flights.models import *
>>> jfk = Airport(code="JFK", city="New York")
>>> jfk.save()
>>> lhr = Airport(code="LHR", city="London")
>>> cdg = Airport(code="CDG", city="Paris")
>>> nrt = Airport(code="NRT", city="Tokyo")
>>> lhr.save()
>>> >>> cdg.save()
  File "<console>", line 1
    >>> cdg.save()
    ^^
SyntaxError: invalid syntax
>>> cdg.save()
>>> nrt.save
<bound method Model.save of <Airport: Tokyo (NRT)>>
>>> nrt.save()
>>> nrt = Airport(code="NRT", city="Tokyo")
>>> nrt.save()
>>> nrt
<Airport: Tokyo (NRT)>
>>> nrt = Airport(code="NRT", city="Tokyo")
>>> nrt.save
<bound method Model.save of <Airport: Tokyo (NRT)>>
>>> nrt
<Airport: Tokyo (NRT)>
>>> nrt = Airport(code="NRT", city="Tokyo")
>>> nrt.save()
>>> nrt
<Airport: Tokyo (NRT)>
>>> f = Flight(origin=jfk, destination=lhr, duration=414)
>>> f.save()
>>> f
<Flight: 5: New York (JFK) to London (LHR)>
>>> f.origin
<Airport: New York (JFK)>
>>> f.city
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Flight' object has no attribute 'city'
>>> f.origin.city
'New York'
>>> f.origin.code
'JFK'
>>> lhr.arrivals.all()
<QuerySet [<Flight: 5: New York (JFK) to London (LHR)>]>
>>> f.objects.all()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "C:\Users\ivana\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\db\models\manager.py", line 186, in __get__
    raise AttributeError(
AttributeError: Manager isn't accessible via Flight instances
>>> Flight.objects.all)(
  File "<console>", line 1
    Flight.objects.all)(
                      ^
SyntaxError: unmatched ')'
>>> Flight.objects.all()
<QuerySet [<Flight: 4: New York (JFK) to London (LHR)>, <Flight:5: New York (JFK) to London (LHR)>]>
>>> clear
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'clear' is not defined
>>> exit()
PS C:\Users\ivana\Desktop\cs50w\Lecture_4\I1_Airlines\airline> python manage.py shell
Python 3.11.2 (tags/v3.11.2:878ead1, Feb  7 2023, 16:38:35) [MSCv.1934 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from flights.models import *
>>> Airport.objects.all()
<QuerySet [<Airport: New York (JFK)>, <Airport: London (LHR)>, <Airport: Paris (CDG)>, <Airport: Tokyo (NRT)>, <Airport: New York(JFK)>, <Airport: London (LHR)>, <Airport: Paris (CDG)>, <Airport: Tokyo (NRT)>, <Airport: New York (JFK)>, <Airport: London (LHR)>, <Airport: Paris (CDG)>, <Airport: Tokyo (NRT)>, <Airport: Tokyo (NRT)>, <Airport: Tokyo (NRT)>]>
>>> Airport.objects.all().delete()
(16, {'flights.Flight': 2, 'flights.Airport': 14})
>>> Airport.objects.all()
<QuerySet []>
>>> Flight.objects.all()
<QuerySet []>
>>> jfk = Airport(code="JFK", city="New York")
>>> lhr = Airport(code="LHR", city="London")
>>> cdg = Airport(code="CDG", city="Paris")
>>> nrt = Airport(code="NRT", city="Tokyo")
>>>
>>> jfk.save()
>>> lhr.save()
>>> cdg.save()
>>> nrt.save()
>>>
>>> f = Flight(origin=jfk, destination=lhr, duration=414)
>>> f.save()
>>>
>>> f
<Flight: 6: New York (JFK) to London (LHR)>
>>> Airport.objects.all()
<QuerySet [<Airport: New York (JFK)>, <Airport: London (LHR)>, <Airport: Paris (CDG)>, <Airport: Tokyo (NRT)>]>
>>> Flight.objects.all)(
  File "<console>", line 1
    Flight.objects.all)(
                      ^
SyntaxError: unmatched ')'
>>> Flight.objects.all()
<QuerySet [<Flight: 6: New York (JFK) to London (LHR)>]>
>>> Airport.objects.filter(city="New York')
  File "<console>", line 1
    Airport.objects.filter(city="New York')
                                ^
SyntaxError: incomplete input
>>> Airport.objects.filter(city="New York")
<QuerySet [<Airport: New York (JFK)>]>
>>> Airport.objects.filter(city="New York").first()
<Airport: New York (JFK)>
>>> Airport.objects.filter(city="New York").second()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'QuerySet' object has no attribute 'second'
>>> Airport.objects.get(city="New York").
  File "<console>", line 1
    Airport.objects.get(city="New York").
                                        ^
SyntaxError: incomplete input
>>> Airport.objects.get(city="New York")
<Airport: New York (JFK)>
>>> Airport.objects.get(city="New Yorkd")
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "C:\Users\ivana\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\db\models\manager.py", line 87, in manager_method
    return getattr(self.get_queryset(), name)(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ivana\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\db\models\query.py", line 637, in get
    raise self.model.DoesNotExist(
flights.models.Airport.DoesNotExist: Airport matching query doesnot exist.
>>> Airport.objects.get(city="New York")
<Airport: New York (JFK)>
>>> jfk = Airport.objects.get(city="New York")
>>> cdg = Airport.objects.get(city="Paris")
>>> cdg
<Airport: Paris (CDG)>
>>> f= Flight(origin=jfk, destination=cdg, duration = 435)
>>> f
<Flight: None: New York (JFK) to Paris (CDG)>
>>> f.save
<bound method Model.save of <Flight: None: New York (JFK) to Paris (CDG)>>
>>> f.save()
>>> exit()
PS C:\Users\ivana\Desktop\cs50w\Lecture_4\I1_Airlines\airline>
